# agentic-traveler

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  LICENSE  README.md  TESTING_STRATEGY.md  agentic_guidelines.md  agentic_traveler_spec.md  project_roadmap.md  pyproject.toml  requirements.txt  task_template.md  task_template_v2.md
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  pyproject.toml  requirements.txt  scaling_concerns.md  test_planner.py
backend/scripts/: backfill_answered_questions.py  delete_firestore_records.py  eval_router.py  register_webhook.py  run_docker_perf_test.ps1  run_local.ps1  run_perf_test.ps1  setup_alerts.py
backend/tally_webhook/: main.py
backend/tests/: conftest.py  manual_test_flow.md  test_chat_stream.py  test_client_factory_stream.py  test_curiosity_injector.py  test_event_emitter_sinks.py  test_journal_saga.py  test_mood_saga.py  test_observability.py
backend/tests/analytics/: test_event_sink.py  test_judge.py  test_metrics_tracker.py  test_usage_tracker.py
backend/tests/core/: test_budget_policy.py  test_markdown_profile.py  test_sanitize.py
backend/tests/economy/: test_pricing.py
backend/tests/guards/: test_off_topic_guard.py
backend/tests/integration/: conftest.py  test_live_pipeline.py  test_metrics_views.py  test_router_agent.py  test_weather_integration.py
backend/tests/interfaces/: test_chat_router.py  test_dependencies.py  test_main.py  test_metrics_router.py  test_profile_routes.py  test_tally_onboarding_enrichment.py  test_telegram_link.py  test_webhook.py
tests/: conftest.py  (+18 more)
(+370 files in other folders)
