[project]
name = "agentic-traveler"
version = "0.1.0"
description = "An agentic travel planner"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
markers = [
  "integration: tests that hit real Firestore and Gemini APIs (deselected by default)",
]
addopts = "-m 'not integration'"